# EduAI-ai

./: .gitignore  Dockerfile  Final_code_Dev.py  config.py  database.py  dependencies.py  main.py  main_original.py  models.py  pyproject.toml  readme.md  requirements.txt  utils.py
services/: exam_generator_original.py  grading.py  pdf_processing.py  vector_store.py
