[project]
name = "eduai-ai-robustcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "google-cloud-aiplatform>=1.132.0",
    "google-generativeai>=0.8.6",
    "gunicorn>=23.0.0",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
    "vertexai>=1.43.0",
]
